--- a/src/sass/plugins/_rrze-elements.scss
+++ b/src/sass/plugins/_rrze-elements.scss
@@ -314,7 +314,7 @@ button.expand-all {
 /*-----------------------------------------------------------------------------------*/
 /* Content Slider
 /*-----------------------------------------------------------------------------------*/
-#content .entry-content .content-slider.flexslider {
+#content .content-slider.flexslider {
     margin: 1rem 3rem;
     .flex-control-nav, 
     .flex-direction-nav,
