--- a/src/sass/elements/_images.scss
+++ b/src/sass/elements/_images.scss
@@ -113,7 +113,7 @@ main, aside, .portalpage-sidebar, .widget {
 	&.aligncenter {
 	    margin-left: calc(-#{$fau-gutter-width} / 2);
 	    margin-right: calc(-#{$fau-gutter-width} / 2);
-	    width: 100vw;
+        width: 100vw;
 	    max-width: 100vw;
 	    
 	    @media (min-width: $screen-xs) {
@@ -125,7 +125,6 @@ main, aside, .portalpage-sidebar, .widget {
 		width: 100vw;
 		max-width: 100vw;
 		@media (min-width: $screen-xs) {
-		    width: auto;
 		    max-width: 100%;
 		}
 	    }
@@ -149,7 +148,7 @@ main, aside, .portalpage-sidebar, .widget {
 	&.aligncenter {
 	    text-align: center;
 	    float: none;
-
+        margin: 1rem auto;
 	}
     }
 }
