--- a/src/sass/plugins/_rrze-calendar.scss
+++ b/src/sass/plugins/_rrze-calendar.scss
@@ -122,7 +122,7 @@
 
 }
 
-
+.rrze-calendar .event-date.bgcol-default,
 .event-category-fau .event-date,
 .event-category-einrichtungen .event-date {
 	background: var(--color-zentral-ci-hell); 
@@ -134,7 +134,7 @@
 	    color:  var(--color-zentral-ci-hell-kontrast); 
 	}
 }
-
+.rrze-calendar .event-date.bgcol-tf,
 .event-category-techfak .event-date {
 	background: var(--color-tf-ci-hell); 
 	color:  var(--color-tf-ci-hell-kontrast); 
@@ -146,6 +146,7 @@
   }
 }
 
+.rrze-calendar .event-date.bgcol-rw,
 .event-category-rwfak .event-date {
 	background: var(--color-rw-ci-hell); 
 	color:  var(--color-rw-ci-hell-kontrast); 
@@ -157,6 +158,7 @@
 	}
 }
 
+.rrze-calendar .event-date.bgcol-phil,
 .event-category-philfak .event-date {
 	background: var(--color-phil-ci-hell); 
 	color:  var(--color-phil-ci-hell-kontrast); 
@@ -168,6 +170,7 @@
 	}
 }
 
+.rrze-calendar .event-date.bgcol-nat,
 .event-category-natfak .event-date {
 	background: var(--color-nat-ci-hell); 
 	color:  var(--color-nat-ci-hell-kontrast); 
@@ -179,6 +182,7 @@
 	}
 }
 
+.rrze-calendar .event-date.bgcol-med,
 .event-category-medfak .event-date {
 	background: var(--color-med-ci-hell); 
 	color:  var(--color-med-ci-hell-kontrast); 
