ohne aspect-ratio

--- a/src/sass/structure/content/_news-items.scss
+++ b/src/sass/structure/content/_news-items.scss
@@ -72,7 +72,7 @@
 	
 	.blogroll-image-3-2 & {
 	    img, svg {
-		aspect-ratio: 3 / 2;
+	//	aspect-ratio: 3 / 2;
 		max-width: 300px;
 		max-height: 200px;
 		object-fit: contain;
