Bildbreite Person-Thumb
#1023

--- a/src/sass/plugins/_fau-person.scss
+++ b/src/sass/plugins/_fau-person.scss
@@ -337,8 +337,8 @@
     
     
 }
-.fau-person.sidebar.thumb-size-large .row,
-.fau-person.sidebar .row  {
+.fau-theme .fau-person.sidebar.thumb-size-large .row,
+.fau-theme .fau-person.sidebar .row  {
     justify-content: flex-start;
     
     figure {
