--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -287,6 +287,26 @@
         .nav-flyout {
             padding-top: 0;
         }
+        .flyout-entries-full {
+            display: flex;
+            flex-direction: column;
+            .button-portal {
+                order: 1;
+                margin-top: 10px;
+                padding: 7px 20px 7px 5px;
+                background: transparent;
+                border-radius: 0;
+                border-bottom: 1px solid var(--color-primary-dunkler);
+                &:hover, &:focus, &:active {
+                    background: var(--color-mainmenu-sublevel-hover-bg);
+                    text-decoration: underline;
+                }
+            }
+            ul {
+                order: 2;
+            }
+
+        }
 
         > li {
             border-top: 1px solid $colorOverlayDark; // #ccc;
