--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.0.27-0
+Version: 2.0.27-1
 Requires at least: 5.0
 Tested up to: 5.8
 Requires PHP: 7.4
@@ -9306,8 +9306,11 @@ body.nav-toggled #headerwrapper {
 @media (min-width: 768px) {
   .orga-breadcrumb {
     display: block;
+    padding-top: 5px;
+    padding-bottom: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
     width: 750px;
-    padding: 5px 15px 0;
     margin: 0 auto;
   }
   .orga-breadcrumb li {
@@ -9328,7 +9331,7 @@ body.nav-toggled #headerwrapper {
 }
 @media (min-width: 1200px) {
   .orga-breadcrumb {
-    width: 1024px;
+    width: 1200px;
   }
 }
 @media (min-width: 1420px) {
