--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.0.29-3
+Version: 2.0.29-4
 Requires at least: 5.0
 Tested up to: 5.8
 Requires PHP: 7.4
@@ -5251,12 +5251,14 @@ main a img:focus,
           text-decoration-color: currentcolor;
   box-shadow: none;
 }
+main .socialmedia li a,
 main .imagelink a,
 main .person-info a,
 main .contactlist a,
 main .widget a,
 main address a,
 main h1 a, main h2 a, main h3 a, main h4 a, main h5 a, main h6 a,
+.entry-content .socialmedia li a,
 .entry-content .imagelink a,
 .entry-content .person-info a,
 .entry-content .contactlist a,
@@ -5268,6 +5270,7 @@ main h1 a, main h2 a, main h3 a, main h4 a, main h5 a, main h6 a,
 .entry-content h4 a,
 .entry-content h5 a,
 .entry-content h6 a,
+.portalpage-content .socialmedia li a,
 .portalpage-content .imagelink a,
 .portalpage-content .person-info a,
 .portalpage-content .contactlist a,
@@ -5279,6 +5282,7 @@ main h1 a, main h2 a, main h3 a, main h4 a, main h5 a, main h6 a,
 .portalpage-content h4 a,
 .portalpage-content h5 a,
 .portalpage-content h6 a,
+.content-inline .socialmedia li a,
 .content-inline .imagelink a,
 .content-inline .person-info a,
 .content-inline .contactlist a,
@@ -5300,7 +5304,9 @@ main h1 a, main h2 a, main h3 a, main h4 a, main h5 a, main h6 a,
   box-shadow: none;
   text-decoration: none;
 }
-main .imagelink a:hover, main .imagelink a:focus,
+main .socialmedia li a:hover, main .socialmedia li a:focus,
+main .imagelink a:hover,
+main .imagelink a:focus,
 main .person-info a:hover,
 main .person-info a:focus,
 main .contactlist a:hover,
@@ -5311,6 +5317,8 @@ main address a:hover,
 main address a:focus,
 main h1 a:hover,
 main h1 a:focus, main h2 a:hover, main h2 a:focus, main h3 a:hover, main h3 a:focus, main h4 a:hover, main h4 a:focus, main h5 a:hover, main h5 a:focus, main h6 a:hover, main h6 a:focus,
+.entry-content .socialmedia li a:hover,
+.entry-content .socialmedia li a:focus,
 .entry-content .imagelink a:hover,
 .entry-content .imagelink a:focus,
 .entry-content .person-info a:hover,
@@ -5333,6 +5341,8 @@ main h1 a:focus, main h2 a:hover, main h2 a:focus, main h3 a:hover, main h3 a:fo
 .entry-content h5 a:focus,
 .entry-content h6 a:hover,
 .entry-content h6 a:focus,
+.portalpage-content .socialmedia li a:hover,
+.portalpage-content .socialmedia li a:focus,
 .portalpage-content .imagelink a:hover,
 .portalpage-content .imagelink a:focus,
 .portalpage-content .person-info a:hover,
@@ -5355,6 +5365,8 @@ main h1 a:focus, main h2 a:hover, main h2 a:focus, main h3 a:hover, main h3 a:fo
 .portalpage-content h5 a:focus,
 .portalpage-content h6 a:hover,
 .portalpage-content h6 a:focus,
+.content-inline .socialmedia li a:hover,
+.content-inline .socialmedia li a:focus,
 .content-inline .imagelink a:hover,
 .content-inline .imagelink a:focus,
 .content-inline .person-info a:hover,
@@ -5384,7 +5396,10 @@ main h1 a:focus, main h2 a:hover, main h2 a:focus, main h3 a:hover, main h3 a:fo
           text-decoration-color: currentcolor;
   box-shadow: none;
 }
-main .imagelink a:active, main .imagelink a:hover, main .imagelink a:focus,
+main .socialmedia li a:active, main .socialmedia li a:hover, main .socialmedia li a:focus,
+main .imagelink a:active,
+main .imagelink a:hover,
+main .imagelink a:focus,
 main .person-info a:active,
 main .person-info a:hover,
 main .person-info a:focus,
@@ -5400,6 +5415,9 @@ main address a:focus,
 main h1 a:active,
 main h1 a:hover,
 main h1 a:focus, main h2 a:active, main h2 a:hover, main h2 a:focus, main h3 a:active, main h3 a:hover, main h3 a:focus, main h4 a:active, main h4 a:hover, main h4 a:focus, main h5 a:active, main h5 a:hover, main h5 a:focus, main h6 a:active, main h6 a:hover, main h6 a:focus,
+.entry-content .socialmedia li a:active,
+.entry-content .socialmedia li a:hover,
+.entry-content .socialmedia li a:focus,
 .entry-content .imagelink a:active,
 .entry-content .imagelink a:hover,
 .entry-content .imagelink a:focus,
@@ -5433,6 +5451,9 @@ main h1 a:focus, main h2 a:active, main h2 a:hover, main h2 a:focus, main h3 a:a
 .entry-content h6 a:active,
 .entry-content h6 a:hover,
 .entry-content h6 a:focus,
+.portalpage-content .socialmedia li a:active,
+.portalpage-content .socialmedia li a:hover,
+.portalpage-content .socialmedia li a:focus,
 .portalpage-content .imagelink a:active,
 .portalpage-content .imagelink a:hover,
 .portalpage-content .imagelink a:focus,
@@ -5466,6 +5487,9 @@ main h1 a:focus, main h2 a:active, main h2 a:hover, main h2 a:focus, main h3 a:a
 .portalpage-content h6 a:active,
 .portalpage-content h6 a:hover,
 .portalpage-content h6 a:focus,
+.content-inline .socialmedia li a:active,
+.content-inline .socialmedia li a:hover,
+.content-inline .socialmedia li a:focus,
 .content-inline .imagelink a:active,
 .content-inline .imagelink a:hover,
 .content-inline .imagelink a:focus,
