--- a/src/sass/plugins/_plugins.scss
+++ b/src/sass/plugins/_plugins.scss
@@ -46,6 +46,8 @@
 // FAU Oembed
 @import "fau-oembed";
 
+// FAU Studienangebot
+@import "fau-studienangebot";
 
 // Social Share 
 // (not used yet)  @import "social-share";
