--- a/src/sass/structure/hero/_banner.scss
+++ b/src/sass/structure/hero/_banner.scss
@@ -138,6 +138,11 @@
 	    
 }
 
+.hide-banner-title .hero-banner .infobar .sitetitle,
+.hide-banner-slogan .hero-banner .infobar .slogan {
+    @include sr-only();
+}
+
 
 @media (max-width: $screen-xs - 1) {
     .page-template-page-start-sub  {
@@ -168,7 +173,5 @@
     @media (min-width: $screen-xs) {
         display: inline-block;
     }
-
-    
 }
 
