Starte Print-CSS

--- a/print.css
+++ b/print.css
@@ -16718,7 +16718,7 @@ footer .socialmedia {
   }
 }
 /* Allgemein ausblenden ***********************************************************************************************/
-.header-menu,
+/*.header-menu,*/
 .orga-breadcrumb,
 .meta-footer,
 .top-link,
