--- a/src/sass/fau-theme-print.scss
+++ b/src/sass/fau-theme-print.scss
@@ -33,7 +33,7 @@
 
 /* Allgemein ausblenden ***********************************************************************************************/
 
-.header-menu,
+/*.header-menu,*/
 .orga-breadcrumb,
 .meta-footer,
 .top-link,
