--- a/src/sass/frameworks/slick/_slick-default.scss
+++ b/src/sass/frameworks/slick/_slick-default.scss
@@ -1,98 +1,101 @@
 /* Slider */
 
-.slick-slider {
-    position: relative;
-    display: block;
-    box-sizing: border-box;
+@media screen {
 
-    user-select: none;
-    touch-action: pan-y;
-}
-
-.slick-list {
-    position: relative;
-    overflow: hidden;
-    display: block;
-    margin: 0;
-    padding: 0;
-
-    &:focus {
-        outline: none;
-    }
-
-    &.dragging {
-        cursor: pointer;
-    }
-}
-
-.slick-slider .slick-track,
-.slick-slider .slick-list {
-    transform: translate3d(0, 0, 0);
-}
-
-.slick-track {
-    position: relative;
-    left: 0;
-    top: 0;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 0;
-
-    &:before,
-    &:after {
-        content: "";
-        display: table;
-    }
-
-    &:after {
-        clear: both;
-    }
-
-    .slick-loading & {
-        visibility: hidden;
-    }
-}
-
-.slick-slide {
-    float: left;
-    height: 100%;
-    min-height: 1px;
-
-    [dir="rtl"] & {
-        float: right;
-    }
-
-    img {
+    .slick-slider {
+        position: relative;
         display: block;
+        box-sizing: border-box;
+
+        user-select: none;
+        touch-action: pan-y;
     }
 
-    &.slick-loading img {
+    .slick-list {
+        position: relative;
+        overflow: hidden;
+        display: block;
+        margin: 0;
+        padding: 0;
+
+        &:focus {
+            outline: none;
+        }
+
+        &.dragging {
+            cursor: pointer;
+        }
+    }
+
+    .slick-slider .slick-track,
+    .slick-slider .slick-list {
+        transform: translate3d(0, 0, 0);
+    }
+
+    .slick-track {
+        position: relative;
+        left: 0;
+        top: 0;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 0;
+
+        &:before,
+        &:after {
+            content: "";
+            display: table;
+        }
+
+        &:after {
+            clear: both;
+        }
+
+        .slick-loading & {
+            visibility: hidden;
+        }
+    }
+
+    .slick-slide {
+        float: left;
+        height: 100%;
+        min-height: 1px;
+
+        [dir="rtl"] & {
+            float: right;
+        }
+
+        img {
+            display: block;
+        }
+
+        &.slick-loading img {
+            display: none;
+        }
+
+        display: none;
+
+
+        .slick-initialized & {
+            display: block;
+        }
+
+        .slick-loading & {
+            visibility: hidden;
+        }
+
+        .slick-vertical & {
+            display: block;
+            height: auto;
+            border: 1px solid transparent;
+        }
+
+        .item {
+            font-size: 1rem;
+        }
+    }
+
+    .slick-arrow.slick-hidden {
         display: none;
     }
-
-    display: none;
-
-
-    .slick-initialized & {
-        display: block;
-    }
-
-    .slick-loading & {
-        visibility: hidden;
-    }
-
-    .slick-vertical & {
-        display: block;
-        height: auto;
-        border: 1px solid transparent;
-    }
-
-    .item {
-        font-size: 1rem;
-    }
-}
-
-.slick-arrow.slick-hidden {
-    display: none;
 }
